--- a/cat_choice/index.html
+++ b/cat_choice/index.html
@@ -3,109 +3,86 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" media="screen and (min-width:1200px)" href="./css/style_pc.css">
+    <link rel="stylesheet" media="screen and (max-width:1200px)" href="./css/style_tablet.css">
+    <link rel="stylesheet" media="screen and (max-width:600px)" href="./css/style_mobile.css">
     <title>Cat Choice</title>
 </head>
 <body>
-    <header>
+    <div class="container">
+        <header>
+            <h1>Cat Choice</h1>
+            <h2><span>くろねこ</span>を選ぼう</h2>
+        </header>
 
-        <h1>Cat Choice</h1>
-        <h2><span>くろねこ</span>を選ぼう</h2>
-
-    </header>
-
-    <main>
-
-        <div class="grid">
-
-            <div>
-                <img src="" alt="">
+        <main>
+            <div class="flex grid">
+                <div>
+                    <img src="" alt="">
+                </div>
+                <div>
+                    <img src="" alt="">
+                </div>
+                <div>
+                    <img src="" alt="">
+                </div>
+                <div>
+                    <img src="" alt="">
+                </div>
+                <div>
+                    <img src="" alt="">
+                </div>
+                <div>
+                    <img src="" alt="">
+                </div>
+                <div>
+                    <img src="" alt="">
+                </div>
+                <div>
+                    <img src="" alt="">
+                </div>
+                <div>
+                    <img src="" alt="">
+                </div>
+                <div>
+                    <img src="" alt="">
+                </div>
+                <div>
+                    <img src="" alt="">
+                </div>
+                <div>
+                    <img src="" alt="">
+                </div>
+                <div>
+                    <img src="" alt="">
+                </div>
+                <div>
+                    <img src="" alt="">
+                </div>
+                <div>
+                    <img src="" alt="">
+                </div>
+                <div>
+                    <img src="" alt="">
+                </div>
+                <div>
+                    <img src="" alt="">
+                </div>
+                <div>
+                    <img src="" alt="">
+                </div>
+                <div>
+                    <img src="" alt="">
+                </div>
+                <div>
+                    <img src="" alt="">
+                </div>
             </div>
 
-            <div>
-                <img src="" alt="">
-            </div>
-
-            <div>
-                <img src="" alt="">
-            </div>
-
-            <div>
-                <img src="" alt="">
-            </div>
-
-            <div>
-                <img src="" alt="">
-            </div>
-
-            <div>
-                <img src="" alt="">
-            </div>
-
-            <div>
-                <img src="" alt="">
-            </div>
-
-            <div>
-                <img src="" alt="">
-            </div>
-
-            <div>
-                <img src="" alt="">
-            </div>
-
-            <div>
-                <img src="" alt="">
-            </div>
-
-            <div>
-                <img src="" alt="">
-            </div>
-
-            <div>
-                <img src="" alt="">
-            </div>
-
-            <div>
-                <img src="" alt="">
-            </div>
-
-            <div>
-                <img src="" alt="">
-            </div>
-
-            <div>
-                <img src="" alt="">
-            </div>
-
-            <div>
-                <img src="" alt="">
-            </div>
-
-            <div>
-                <img src="" alt="">
-            </div>
-
-            <div>
-                <img src="" alt="">
-            </div>
-
-            <div>
-                <img src="" alt="">
-            </div>
-
-            <div>
-                <img src="" alt="">
-            </div>
-
-        </div>
-
-        <p>正解数：<span>0</span></p>
-
-        <button>もう一回</a>
-
-    </main>
-
+            <p>正解数：<span>0</span></p>
+            <button>もう一回</a>
+        </main>
+    </div>
     <script src="./js/script.js"></script>
 </body>
 </html>
